# catalog

./: Cargo.toml  README.md  client.py
src/: config.rs  lib.rs  models.rs  repositories.rs  routes.rs  service.rs
templates/: app.js  base.html  catalog.html
