[package]
name = "catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
auth_middleware = {git="https://github.com/Austin-rgb/auth_middleware"}
ferrumec = {git="https://github.com/Austin-rgb/ferrumec"}
async-trait = "0.1.89"
moka = { version = "0.12.13", features = ["future"] }
tera = "1.20.1"
event-stream = {git="https://github.com/Austin-rgb/event-stream"}